<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
**       Copyright (C) 2010 Patrick Decat
** 
**       This file is part of TrafficInfoGrabber.
**
**   TrafficInfoGrabber is free software: you can redistribute it and/or modify
**   it under the terms of the GNU General Public License as published by
**   the Free Software Foundation, either version 3 of the License, or
**   (at your option) any later version.
**
**   TrafficInfoGrabber is distributed in the hope that it will be useful,
**   but WITHOUT ANY WARRANTY; without even the implied warranty of
**   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
**   GNU General Public License for more details.
**
**   You should have received a copy of the GNU General Public License
**   along with TrafficInfoGrabber.  If not, see <http://www.gnu.org/licenses/>.
**
*/
-->
<resources>
    <string name="app_name">TrafficInfoGrabber</string>
    <string name="liveTrafficLite">Live Traffic Live</string>
    <string name="liveTraffic">Live Traffic</string>
    <string name="closedAtNight">Closed At Night</string>
    <string name="quickStats">Quicks statistics</string>
    <string name="trafficCollisions">Traffic Collisions</string>
    <string name="sytadinWebsite">www.sytadin.fr</string>
	<string name="about">About</string>

	<!-- Strings for About dialog -->
	<string name="about_comments">A simple traffic information grabber.</string>
	<string name="about_copyright">Copyright © 2010 pdecat</string>
	<string name="about_website_label">TrafficInfoGrabber at Google Code</string>
	<string name="about_website_url">http://code.google.com/p/TrafficInfoGrabber</string>
	<string name="about_email">pdecat+d2d-tig@gmail.com</string>
</resources>
