<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 **
 **       Copyright (C) 2010 Patrick Decat
 ** 
 **       This file is part of TrafficInfoGrabber.
 **
 **   TrafficInfoGrabber is free software: you can redistribute it and/or modify
 **   it under the terms of the GNU General Public License as published by
 **   the Free Software Foundation, either version 3 of the License, or
 **   (at your option) any later version.
 **
 **   TrafficInfoGrabber is distributed in the hope that it will be useful,
 **   but WITHOUT ANY WARRANTY; without even the implied warranty of
 **   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 **   GNU General Public License for more details.
 **
 **   You should have received a copy of the GNU General Public License
 **   along with TrafficInfoGrabber.  If not, see <http://www.gnu.org/licenses/>.
 **
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/liveTraffic"
          android:title="@string/liveTraffic" />
    <item android:id="@+id/liveTrafficLite"
          android:title="@string/liveTrafficLite" />
    <item android:id="@+id/closedAtNight"
          android:title="@string/closedAtNight" />
    <item android:id="@+id/quickStats"
          android:title="@string/quickStats" />
    <item android:id="@+id/trafficCollisions"
          android:title="@string/trafficCollisions" />
    <item android:id="@+id/sytadinWebsite"
          android:title="@string/sytadinWebsite" />

    <item android:id="@+id/about"
          android:title="@string/about" />
</menu>
